[bugfix] Another attempts to fix coverall & Sonar. Don't give up